--- a/sound/soc/codecs/Kconfig
+++ b/sound/soc/codecs/Kconfig
@@ -1102,4 +1102,8 @@ config SND_SOC_TFA98XX
 	depends on I2C
 	help
 	Enables support for NXP98xx Smart PA.
+
+source "sound/soc/codecs/tfa/Kconfig"
+source "sound/soc/codecs/tfa9896/Kconfig"
+
 endmenu
